1. added .gitignore file
2. created this file in order to help with marking
3. added requirements.txt file in order to make the project virtualenv friendly